# akuma

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/images/: readme.txt
include/core/: application.h
include/gui/: boxlayout.h  button.h  label.h  panel.h  tabs.h  textbox.h  widget.h
src/: main.cpp
src/core/: application.cpp
src/gui/: boxlayout.cpp  button.cpp  label.cpp  panel.cpp  tabs.cpp  textbox.cpp  widget.cpp
